# vit_receipt

./: README.md  extraction.py  image_process.py  inference.py  main.py  pyproject.toml  test.ipynb
